--- a/deverick/templates/page/contato.html
+++ b/deverick/templates/page/contato.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Django </title>
+    <title>Contato | Django</title>
 </head>
 <body>
 
-    <h1>Home Django</h1>
+    <h1>Contato Django</h1>
     
 </body>
 </html>
