--- a/deverick/templates/page/sobre.html
+++ b/deverick/templates/page/sobre.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Me apague</title>
+    <title>Sobre | Django</title>
 </head>
-
 <body>
-    <h1>Me Apague </h1>
+    <h1>Sobre Django</h1>
 </body>
-
 </html>
