--- a/deverick/templates/page/pages/home.html
+++ b/deverick/templates/page/pages/home.html
@@ -1,12 +1,13 @@
 {% include 'page/partials/head.html' %} <!-- Buscando á outra metade do código-->
+
 <body>
 
     <header class="main-header-container">
         <div class="main-header container">
             <h1>
-                <a href="/">
-                    <i class="fas fa-gamepad"></i>
-                    <span class="color">Home Django - {{name}}</span>
+                <a class="main-logo" href="/">
+                    <i class="fas fa-gamepad main-logo-icon"></i>
+                    <span class="main-logo-text">Página de Games | Django</span>
                 </a>
             </h1>
         </div>
