--- a/deverick/templates/page/pages/home.html
+++ b/deverick/templates/page/pages/home.html
@@ -1,17 +1,27 @@
 {% include 'page/partials/head.html' %} <!-- Buscando á outra metade do código-->
 
 <body>
+    {% include 'page/partials/header.html' %} <!-- Buscando á outra metade do código-->
+    {% include 'page/partials/search.html' %}
 
-    <header class="main-header-container">
-        <div class="main-header container">
-            <h1>
-                <a class="main-logo" href="/">
-                    <i class="fas fa-gamepad main-logo-icon"></i>
-                    <span class="main-logo-text">Página de Games | Django</span>
-                </a>
-            </h1>
+
+    <main class="main-content-container">
+        <div class="main-content main-content-list container">
+            <div class="temp"></div>
+            <div class="temp"></div>
+            <div class="temp"></div>
+            <div class="temp"></div>
+            <div class="temp"></div>
+            <div class="temp"></div>
+            <div class="temp"></div>
+            <div class="temp"></div>
+            <div class="temp"></div>
+            <div class="temp"></div>
+            <div class="temp"></div>
         </div>
-    </header>
+    </main>
+
+
 </body>
 
 </html>
