--- a/deverick/templates/page/partials/head.html
+++ b/deverick/templates/page/partials/head.html
@@ -22,12 +22,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
 
     <style>
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-
         :root {
             --color-primary: #269fe6;
             --color-primary-hover: #2086c2;
@@ -72,13 +66,20 @@
             --spacing-gutter-large: 4rem;
         }
 
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+
         html {
             font-size: 62.5%;
         }
 
         body {
             font-size: 1.6rem;
-            background: var(--font-primary);
+            font-family: var(--font-primary);
+            background: var(--color-gray-1);
         }
 
         h1,
@@ -90,23 +91,19 @@
             font-family: var(--font-headings);
         }
 
-        .color {}
-
-        .main-header-container {
-            background: var(--color-primary-dark);
-        }
-
-        .main-header {}
-
         .container {
             max-width: 144rem;
             margin: 0 auto;
             padding: var(--spacing-gutter-medium);
         }
 
+        .main-header-container {
+            background: var(--color-primary-dark);
+        }
+
         .main-logo {
-            color: var(--color-white);
             font-size: 4rem;
+            color: var(--color-white);
             text-decoration: none;
             display: flex;
             flex-flow: row nowrap;
@@ -118,6 +115,65 @@
 
         .main-logo-icon {
             margin-right: 2rem;
+        }
+
+        .search-form {
+            border: .2rem solid var(--color-primary-dark);
+            max-width: 64rem;
+            margin: 0 auto;
+            border-radius: .4rem;
+            position: relative;
+            transition: all 300ms ease-in-out;
+        }
+
+        .search-input,
+        .search-button {
+            border: none;
+            background: none;
+            outline: none;
+            padding: 1rem;
+            transition: all 300ms ease-in-out;
+        }
+
+        .search-input {
+            width: 100%;
+            padding-right: 3rem;
+        }
+
+        .search-button {
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+
+        .search-button:focus {
+            outline: 1px solid var(--color-primary);
+            background: rgba(0, 0, 0, .05)
+        }
+
+        .search-form:focus-within {
+            border-color: var(--color-primary);
+            background: var(--color-white);
+        }
+
+        .search-form:focus-within .search-button {
+            color: var(--color-primary);
+        }
+
+        .main-content {
+            background: blue;
+            padding-top: 0;
+        }
+
+        .main-content-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+            gap: var(--spacing-gutter-large);
+        }
+
+        .temp {
+            height: 40rem;
+            background: red;
         }
     </style>
 
