--- a/deverick/templates/page/partials/head.html
+++ b/deverick/templates/page/partials/head.html
@@ -80,6 +80,7 @@
             font-size: 1.6rem;
             font-family: var(--font-primary);
             background: var(--color-gray-1);
+            color: var(--color-dark-text);
         }
 
         h1,
@@ -161,7 +162,6 @@
         }
 
         .main-content {
-            background: blue;
             padding-top: 0;
         }
 
@@ -171,9 +171,96 @@
             gap: var(--spacing-gutter-large);
         }
 
-        .temp {
-            height: 40rem;
-            background: red;
+
+        .game {
+            background: var(--color-white);
+            box-shadow: -5px 5px 10px rgba(0, 0, 0, .2);
+            transform: scale(1);
+            transition: all 300ms ease-in-out;
+            border-radius: .4rem;
+            overflow: hidden;
+        }
+
+        .game img {
+            max-width: 100%;
+        }
+
+        .game-list-item {
+            max-width: 64rem;
+        }
+
+        .game-list-item:hover {
+            transform: scale(1.02);
+            box-shadow: -8px 8px 18px rgba(0, 0, 0, .25);
+        }
+
+
+        .game-title-container {
+            padding: var(--spacing-gutter-medium);
+            padding-bottom: 2rem;
+        }
+
+        .game-author {
+            padding: 0 var(--spacing-gutter-medium);
+        }
+
+        .game-content {
+            padding: var(--spacing-gutter-medium);
+            padding-top: 2rem;
+        }
+
+        .game-author-item {
+            color: var(--color-gray-4);
+            margin-right: 1rem;
+            font-style: italic;
+            font-size: 1.4rem;
+        }
+
+        .game-author a {
+            color: var(--color-primary);
+            transition: all 300ms ease-in-out;
+            text-decoration: none;
+        }
+
+        .game-author a:hover {
+            color: var(--color-primary-dark);
+        }
+
+
+
+
+
+        .game-meta-container {
+            display: flex;
+            flex-flow: row wrap;
+            padding: var(--spacing-gutter-medium);
+            background: var(--color-gray-1);
+        }
+
+        .game-meta {
+            display: flex;
+            flex-flow: column nowrap;
+            flex-shrink: 1;
+            flex-grow: 1;
+            text-align: center;
+        }
+
+        .game-meta-title {
+            font-size: 1.6rem;
+        }
+
+        .game-footer a {
+            background: var(--color-primary-dark);
+            display: block;
+            color: var(--color-white);
+            text-decoration: none;
+            text-align: center;
+            padding: 1.5rem var(--spacing-gutter-medium);
+            transition: all 300ms ease-in-out;
+        }
+
+        .game-footer a:hover {
+            filter: brightness(2);
         }
     </style>
 
